<resources>
    <string name="app_name" translatable="false">Nutri-O-Matic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="description_product" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque habitant morbi tristique senectus et netus et. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque habitant morbi tristique senectus et netus et. Facilisis sed odio morbi quis commodo. Imperdiet sed euismod nisi porta lorem mollis. Ut enim blandit volutpat maecenas volutpat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque habitant morbi tristique senectus et netus et. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque habitant morbi tristique senectus et netus et. Facilisis sed odio morbi quis commodo. Imperdiet sed euismod nisi porta lorem mollis. Ut enim blandit volutpat maecenas volutpat.</string>

    <string name="greet_user">Hi, %1$s</string>
    <string name="your_category">Your category </string>
    <string name="daily_calorie_needs">Daily calorie needs </string>
    <string name="calorie">%1$d calories</string>

    <string name="minimum_password_length">Must be at least 8 characters</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="minimum_name_length">Must be at least 3 characters</string>
    <string name="invalid_email_format">Invalid email format</string>

    <string name="birthday_datepicker_title">Select birth date</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="logout_dialog_message">Are you sure want to logout?</string>
    <string name="logout_dialog_title">Logout</string>
    <string name="failed_to_take_photo">Failed to take photo</string>

    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="measurement">Measurement</string>
    <string name="height_cm">Height (cm)</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="weight_goal_kg">Weight Goal (kg)</string>

    <string name="save">Save</string>

    <string name="gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

    <string name="health_goal">Health Goal</string>
    <string name="health_goal_lose_weight">Lose Weight</string>
    <string name="health_goal_maintain_weight">Maintain Weight</string>
    <string name="health_goal_gain_weight">Gain Weight</string>

    <string name="product_type">Product Type</string>
    <string name="product_type_snack">Snacks</string>
    <string name="product_type_chocolate_bar">Chocolate Bar</string>
    <string name="product_type_ice_cream">Ice Cream</string>
    <string name="product_type_bread">Bread</string>
    <string name="product_type_cheese">Cheese</string>
    <string name="product_type_frozen_food">Frozen Food</string>
    <string name="product_type_water">Water</string>
    <string name="product_type_juice">Juice</string>
    <string name="product_type_milk">Milk</string>
    <string name="product_type_coffee">Coffee</string>
    <string name="product_type_tea">Tea</string>

    <string name="activity_level">Activity Level</string>
    <string name="activity_level_sedentary">Sedentary</string>
    <string name="activity_level_lightly_active">Lightly Active</string>
    <string name="activity_level_moderately_active">Moderately Active</string>
    <string name="activity_level_very_active">Very Active</string>
    <string name="activity_level_super_active">Super Active</string>

    <string name="hint_product_name">Product Name</string>
    <string name="hint_product_type">Product Type</string>
    <string name="hint_product_description">Product Description</string>
    <string name="hint_grade">Grade</string>
    <string name="hint_price">Price</string>
    <string name="hint_serving_size">Serving size</string>
    <string name="hint_serving_size_per_container">Serving size per container</string>
    <string name="amount_per_serving">Amount per serving</string>
    <string name="hint_calories">Total calories (kcal)</string>
    <string name="hint_fat">Total Fat (g)</string>
    <string name="hint_saturated_fat">Saturated Fat (g)</string>
    <string name="hint_protein">Protein (g)</string>
    <string name="hint_carbohydrate">Carbohydrate (g)</string>
    <string name="hint_fiber">Dietary Fiber (g)</string>
    <string name="hint_sugar">Sugar (g)</string>
    <string name="hint_sodium">Sodium (mg)</string>

    <string name="birthdate">Birthdate</string>
    <string name="username">Username</string>
    <string name="store_name">Store Name</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>

    <string name="profile_update_success">Success updating profile</string>
    <string name="please_choose_a_valid_image">Please choose a valid image!</string>

    <string name="search_transaction">Search Transaction</string>

    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="protein">Protein</string>
    <string name="total_fat">Total Fat</string>
    <string name="total_calories">Total Calories</string>
    <string name="total_carbohydrate">Total Carbohydrate</string>
    <string name="total_sugar">Total Sugar</string>
    <string name="sodium">Sodium</string>

    <string name="nutrition_value_kcal">%1$.1f kcal</string>
    <string name="nutrition_value_g" translatable="false">%1$.1fg</string>
    <string name="nutrition_value_mg" translatable="false">%1$.1fmg</string>
    <string name="this_qr_code_will_expired_in_05_00">This QR Code will expired in %1$02d:%2$02d</string>
    <string name="title_add_product">Add Product</string>
    <string name="advertise">Advertise</string>
    <string name="title_checkout">Checkout</string>
    <string name="pay">Pay</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="hint_name">Name</string>
    <string name="okay">Okay</string>
    <string name="transaction_status">Transaction Status</string>
    <string name="amount">Amount</string>
    <string name="virtual_account">Virtual Account</string>
    <string name="transaction_start">Transaction Start</string>
    <string name="transaction_end">Transaction End</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="scan_this_qr_code">Scan this QR Code to proccess the transaction</string>
    <string name="upload_proof_of_payment">Upload proof of payment!</string>
    <string name="your_message">Your message</string>
    <string name="process">Process</string>
    <string name="title_payment">Payment</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="declined">Declined</string>
    <string name="search_product">Search Product</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_account">"Don't have account? "</string>
    <string name="register_redirect">"Register "</string>
    <string name="retake">Retake</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="have_account">"Have account? "</string>
    <string name="login_redirect">Login</string>
    <string name="title_scan">Scan</string>
    <string name="title_scan_result">Scan Result</string>
    <string name="title_transaction_detail">Transaction Detail</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="title_my_store">My Store</string>
    <string name="apply">Apply</string>
    <string name="ttile_update_product">Update Product</string>
    <string name="tsc_status_unadvertise" translatable="false">Unadvertised</string>
    <string name="tsc_status_advertise" translatable="false">Advertised</string>
    <string name="tsc_status_process" translatable="false">Process</string>
    <string name="tsc_status_decline" translatable="false">Declined</string>

    <string name="updated_at">Updated at %1$s</string>
    <string name="payment_id">Payment ID</string>
    <string name="store_id">Store ID</string>
    <string name="product_id">Product ID</string>
    <string name="saturated_fat">Saturated Fat</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="classification_insufficient_weight">Insufficient Weight</string>
    <string name="classification_normal_weight">Normal Weight</string>
    <string name="classification_obesity_type_1">Obesity Type I</string>
    <string name="classification_obesity_type_2">Obesity Type II</string>
    <string name="classification_obesity_type_3">Obesity Type III</string>
    <string name="classification_overweight_level_1">Overweight Level I</string>
    <string name="classification_overweight_level_2">Overweight Level II</string>
    <string name="delete">Delete</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="store">Store</string>
    <string name="scan">Scan</string>
    <string name="history">History</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="payment">Payment</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="gallery">Gallery</string>
    <string name="grade_a" translatable="false">Grade A</string>
    <string name="grade_b" translatable="false">Grade B</string>
    <string name="grade_c" translatable="false">Grade C</string>
    <string name="grade_d" translatable="false">Grade D</string>
    <string name="dietary_fiber">Dietary Fiber</string>
    <string name="error_failed_to_open_camera">Failed to open camera</string>
    <string name="products_not_found">Products not found, search another products!</string>
    <string name="qr_code_expired">Sorry, QR Code expired</string>
    <string name="save_product_first">Save product first!</string>
    <string name="delete_product">Delete Product</string>
    <string name="are_you_sure_want_to_delete_this_product">Are you sure want to delete this product?</string>
    <string name="success_delete_the_product">Success delete the product!</string>
</resources>