<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_surfaceContainerLowest"
    tools:context=".presentation.result.ScanResultActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:menu="@menu/scan_result_menu"
            app:navigationIcon="@drawable/arrow_left"
            app:title="Scan Result" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_label"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/label_a"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_scan_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/iv_label"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_scan_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_scan_photo"
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/cendol"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_scan_name"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_nutrition_information"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@id/btn_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_scan_photo">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="32dp"
                    android:paddingVertical="16dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_nutrition_information"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nutrition_facts"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/data_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_nutrition_information">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="8dp">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/total_calories" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tv_total_calory"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textAlignment="textEnd"
                                tools:text="190 kcal" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="8dp">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/total_fat" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tv_total_fat"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textAlignment="textEnd"
                                tools:text="4g" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="8dp">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/protein" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tv_protein"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textAlignment="textEnd"
                                tools:text="5g" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="8dp">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/total_carbohydrate" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tv_total_carbohydrate"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textAlignment="textEnd"
                                tools:text="25g" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="8dp">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/total_sugar" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tv_total_sugar"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textAlignment="textEnd"
                                tools:text="18g" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="8dp">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/sodium" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tv_sodium"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textAlignment="textEnd"
                                tools:text="220mg" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_okay"
                style="@style/OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="Okay"
                app:layout_constraintBottom_toBottomOf="@id/btn_save"
                app:layout_constraintEnd_toStartOf="@id/btn_save"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_save" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                style="@style/PrimaryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_okay" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>